<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    // Changes Made Here to hide Push Message Preference
    <!--<SwitchPreferenceCompat
                        android:defaultValue="false"
                        android:key="pref_toggle_push_messaging"
                        android:title="@string/preferences__textsecure_messages"
                        android:summary="@string/preferences__use_the_data_channel_for_communication_with_other_textsecure_users"/>-->

    <org.grovecity.drizzlesms.components.SwitchPreferenceCompat
                        android:defaultValue="false"
                        android:key="pref_enter_sends"
                        android:summary="@string/preferences__pressing_the_enter_key_will_send_text_messages"
                        android:title="@string/preferences__pref_enter_sends_title"/>

    <Preference android:key="pref_choose_identity"
                android:title="@string/preferences__choose_identity"
                android:summary="@string/preferences__choose_your_contact_entry_from_the_contacts_list"/>

</PreferenceScreen>
