<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@android:color/white"
    android:paddingTop="@dimen/com_parse_ui_vertical_margin"
    android:paddingLeft="@dimen/com_parse_ui_horizontal_margin"
    android:paddingRight="@dimen/com_parse_ui_horizontal_margin"
    android:paddingBottom="@dimen/com_parse_ui_vertical_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/drizzle_drop_by_drop_small"
            android:scaleType="fitCenter"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ParseLoginUI.EditText"
            android:fontFamily="sans-serif"
            android:inputType="textEmailAddress"
            android:hint="Email"  />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ParseLoginUI.EditText"
            android:layout_marginTop="@dimen/com_parse_ui_small_vertical_spacing"
            android:fontFamily="sans-serif"
            android:hint="Password"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />

        <LinearLayout
            android:id="@+id/parse_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/com_parse_ui_large_vertical_spacing">

            <Button
                android:id="@+id/login"
                style="@style/ParseLoginUI.Button"
                android:layout_weight="0.5"
                android:text="@string/com_parse_ui_parse_login_button_label" />

            <Button
                android:id="@+id/createaccount"
                style="@style/ParseLoginUI.Button"
                android:layout_marginLeft="@dimen/com_parse_ui_small_horizontal_spacing"
                android:layout_weight="0.5"
                android:text="SignUp" />
        </LinearLayout>

        <!--<Button-->
            <!--android:id="@+id/parse_login_help"-->
            <!--style="@style/ParseLoginUI.HelpButton"-->
            <!--android:layout_marginTop="@dimen/com_parse_ui_small_vertical_spacing"-->
            <!--android:layout_marginBottom="@dimen/com_parse_ui_small_vertical_spacing"-->
            <!--android:text="@string/com_parse_ui_forgot_password_button_label" />-->


        <Button
            android:id="@+id/facebook"
            style="@style/ParseLoginUI.Button.ThirdPartyLogin"
            android:layout_marginTop="16dp"
            android:background="@drawable/com_parse_ui_facebook_login_button_background_selector"
            android:drawableLeft="@drawable/com_parse_ui_facebook_login_logo"
            android:text="@string/com_parse_ui_facebook_login_button_label"/>

        <Button
            android:id="@+id/twitter"
            style="@style/ParseLoginUI.Button.ThirdPartyLogin"
            android:layout_marginTop="@dimen/com_parse_ui_small_vertical_spacing"
            android:background="@drawable/com_parse_ui_twitter_login_button_background_selector"
            android:drawableLeft="@drawable/com_parse_ui_twitter_login_logo"
            android:text="@string/com_parse_ui_twitter_login_button_label"/>

    </LinearLayout>

</LinearLayout>